# bgetech_modbus

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  test.py
.github/workflows/: ci-cd.yaml  quality_check.yaml
bgetech_modbus/: client.py
bgetech_modbus/devices/: __init__.py  base.py  ds100.py  template.py
tests/: test_client.py
